<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".itemlist.ItemListActivity"
    android:id="@+id/itemListContent"
    >

    <androidx.recyclerview.widget.RecyclerView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/itemList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?actionBarSize"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        >

    </androidx.recyclerview.widget.RecyclerView>


<!--        TODO: FIX POSITION -->


    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.Toolbar"
        android:backgroundTint="@color/colorBottomBar"
        android:id="@+id/itemListTotalBar"
        android:minHeight="?actionBarSize"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total: $0.00"
            android:id="@+id/itemListTotalText"
            android:textColor="@color/white"
            style="@style/TextAppearance.Material3.TitleMedium">
        </TextView>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addButton"

        app:srcCompat = "@drawable/ic_add_button_24dp"
        android:backgroundTint="@color/colorAddButton"
        android:tint="@color/black"
        app:layout_anchor="@id/itemListTotalBar"
        app:layout_anchorGravity="bottom|right"
        android:contentDescription="Add item"
        />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/itemListAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/itemList"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/itemListMaterialToolbar"
            app:title="Items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTitleBar"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/ab_item_list_appbar"
            app:titleTextAppearance="@style/TextAppearance.Material3.DisplaySmall"
            app:titleTextColor="@color/white"
            android:elevation="0dp">

        </com.google.android.material.appbar.MaterialToolbar>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/itemListSFBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:minHeight="40dp"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/itemListSort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/itemListFilter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/sortButton"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorItemListSFMenu"
                        android:text="SORT">

                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/itemListFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/itemListSort"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/filterButton"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorItemListSFMenu"
                        android:text="FILTER"></Button>
                </LinearLayout>

                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.Button.IconButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/itemListFilter"
                    app:layout_constraintTop_toTopOf="parent"
                    android:drawableEnd="@drawable/ic_refresh_24dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

